# pypispdx

./: README.md  pypispdx-0.1.0.spdx  pyproject.toml  requirements.txt
src/pypispdx/: pypispdx.py
