[project]
name = "pypispdx"
version = "0.1.0"
authors = [
  { name="Marc-Etienne Vargenau", email="marc-etienne.vargenau@nokia.com" },
]
description = "An SCA tool for creating an SPDX SBOM for a https://pypi.org/ package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
    "spdx-license-list>=3.27",
    "spdx-tools>=0.8.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/nokia/pypispdx"
Issues = "https://github.com/nokia/pypispdx/issues"

[project.scripts]
pypispdx = "pypispdx.pypispdx:main"
